<resources>
    <string name="app_name">My Office</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="submit">Submit</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_front">Front</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="slno">slno</string>
    <string name="phone_number">Phone Number</string>
    <string name="textview">TextView</string>
    <string name="pictureName">Picture</string>
    <string name="update">Update</string>
    <string name="photo">Photo</string>
    <string name="back">back</string>
</resources>
