<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.antivenom.myoffice.MainActivity">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/backButtonMain"
                android:layout_margin="8dp"
                android:background="@drawable/red_button_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>
        <TableLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView

                    android:id="@+id/nameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    />



                <EditText

                    android:id="@+id/et_name"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10" >

                </EditText>

            </TableRow>



            <TableRow

                android:id="@+id/phoneText"

                android:layout_width="wrap_content"

                android:layout_height="wrap_content"

                >



                <TextView

                    android:id="@+id/textView1"

                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"

                    android:text="@string/phone" />



                <EditText

                    android:id="@+id/et_phone"

                    android:layout_width="wrap_content"
                    android:inputType="phone"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"

                    android:ems="10" >

                </EditText>

            </TableRow>

        </TableLayout>




        <RelativeLayout
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_centerHorizontal="true"
                android:id="@+id/btn_submit"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/submit"
                android:background="@drawable/button_click"/>
        </RelativeLayout>
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="1">



            <TextView

                android:id="@+id/tv_slno"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/photo"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_weight="0.77" />



            <TextView

                android:id="@+id/tv_name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:text="@string/name"
                android:textColor="#000"
                android:textSize="20sp"
                />



            <TextView

                android:id="@+id/tv_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/phone"
                android:textColor="#000"
                android:textSize="20sp"
                />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_custom_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >
        </ListView>

    </LinearLayout>


